chore(blog): adjust funds lead-in punctuation in Steak 'n Shake post

--- a/data/blog/opensats-receives-donation-commitment-from-steak-n-shake.mdx
+++ b/data/blog/opensats-receives-donation-commitment-from-steak-n-shake.mdx
@@ -48,7 +48,7 @@ hard-earned sats.
 
 If you share our commitment to free and open-source software for Bitcoin and
 freedom tech, you can support OpenSats by donating to one of [our
-funds](/funds).
+funds](/funds):
 
 <div className="text-center">
   <DonateRecurringButton />
