Fix formatting for username address (dana wallet) section

--- a/data/blog/fifteenth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/fifteenth-wave-of-bitcoin-grants.mdx
@@ -106,7 +106,7 @@ release, including a stable build on the Google Play Store. The work will focus
 on error handling, reliable recovery through chain rescans, and basic security
 features such as PIN or biometric protection. Beyond those core milestones, the
 project plans to improve the speed and consistency of scanning, allow users to
-register their own “username@danawallet.app” addresses, improve the
+register their own `username@danawallet.app` addresses, improve the
 transaction history view, and add features like offline mode and flexible
 denomination display. Over time, the project may introduce a contact list, and
 notifications between Dana Wallet users to make receiving silent payments more
