Fix repository links formatting

--- a/data/blog/fifteenth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/fifteenth-wave-of-bitcoin-grants.mdx
@@ -79,14 +79,14 @@ as DM-style notifications between senders and receivers and GPU-accelerated
 scanning, with the goal of making Silent Payments adoption more accessible for
 both desktop and mobile users relying on remote scanners.
 
-Repositories: [/blindbitbtc]  
+Repositories: [blindbitbtc]  
 License: MIT
 
 [BlindBit Oracle]: https://github.com/setavenger/blindbit-oracle
 [BlindBit Desktop]: https://github.com/setavenger/blindbit-desktop
 [BlindBit Scan]: https://github.com/setavenger/blindbit-scan
 [BlindBit Spend]: https://github.com/setavenger/blindbit-spend
-[/blindbitbtc]: https://github.com/blindbitbtc
+[blindbitbtc]: https://github.com/blindbitbtc
 [Umbrel]: https://umbrel.com/
 [Start9]: https://start9.com/
 
@@ -315,7 +315,7 @@ provide an open-source foundation for transparent mining accounting and
 hashrate-linked financial tools, reducing dependence on centralized pool
 infrastructure.
 
-Repositories: [/braidpool/braidpool]  
+Repositories: [braidpool/braidpool]  
 License: AGPL-3.0
 
 [Mohd Zaid]: https://github.com/zaidmstrr
@@ -325,7 +325,7 @@ License: AGPL-3.0
 [Audit Mode]: https://github.com/braidpool/braidpool/pull/305
 [UHPO]: https://github.com/braidpool/braidpool/blob/main/docs/braidpool_spec.md#unspent-hasher-payment-output
 [FROST]: https://www.rfc-editor.org/rfc/rfc9591.html
-[/braidpool/braidpool]: https://github.com/braidpool/braidpool
+[braidpool/braidpool]: https://github.com/braidpool/braidpool
 
 ---
 
