--- a/data/blog/fifteenth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/fifteenth-wave-of-bitcoin-grants.mdx
@@ -46,9 +46,9 @@ These grants are made possible by donations to our [General
 Fund](/funds/general). If you’d like to help sustain free and open-source work,
 please consider donating:
 
-<center>
+<div className="text-center">
   <DonateToGeneralFundButton />
-</center>
+</div>
 
 Below, we take a closer look at each grant and the work being supported.
 
