Revert back: Fix HTML structure for first donation button
<div className="text-center"> pulled it all the way to the left side of the page. Unsure why since it worked nicely for the recurring donation button at the bottom of the page =/

--- a/data/blog/fifteenth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/fifteenth-wave-of-bitcoin-grants.mdx
@@ -46,9 +46,9 @@ These grants are made possible by donations to our [General
 Fund](/funds/general). If you’d like to help sustain free and open-source work,
 please consider donating:
 
-<div className="text-center">
+<center>
   <DonateToGeneralFundButton />
-</div>
+</center>
 
 Below, we take a closer look at each grant and the work being supported.
 
