Add first draft

--- a/data/blog/opensats-receives-two-million-donation-from-the-reynolds-foundation.mdx
+++ b/data/blog/opensats-receives-two-million-donation-from-the-reynolds-foundation.mdx
@@ -7,3 +7,41 @@ images: ['/static/images/blog/TODO.jpg']
 draft: false
 summary: "The Reynolds Foundation is supporting OpenSats with a $2,000,000 donation."
 ---
+
+We are delighted to share that [The Reynolds Foundation] has made an additional
+$2,000,000 donation to OpenSats, directed to our General Fund, following [a
+$1,000,000 gift last year].
+
+Bitcoin development is a long-distance effort. OpenSats' focus is on providing
+steady funding, and [long-term support] so contributors can work on freedom tech
+without compromising on mission or time horizon. This generous donation helps us
+provide that support.
+
+OpenSats is a 501(c)(3) public charity dedicated to maintaining sustainable
+funding for free and open-source projects and contributors, with a focus on
+Bitcoin and projects that help Bitcoin flourish. 100% of donations to [our
+funds] are used to directly support projects and contributors, while our
+[operational budget] is funded separately.
+
+The Reynolds Foundation emphasizes bold, intentional, impact-driven
+philanthropy, investing in people, ideas, and ecosystems that make freedom
+tangible and support human flourishing in open societies. That focus aligns with
+the [OpenSats mission] to support Bitcoin and related free and open-source
+software that strengthens individual sovereignty and liberty.
+
+We are thankful to The Reynolds Foundation for placing its trust and confidence
+in OpenSats, and we will continue working hard to make it count.
+
+<div className="text-center">
+  <DonateRecurringButton />
+</div>
+
+If you are a developer working on free and open-source bitcoin and nostr
+projects, we encourage you to [apply for funding].
+
+[The Reynolds Foundation]: https://www.reynoldsfoundation.com/
+[long-term support]: /tags/lts
+[our funds]: /funds
+[operational budget]: /funds/ops
+[OpenSats mission]: /mission
+[apply for funding]: /apply
