--- a/data/blog/opensats-receives-two-million-donation-from-the-reynolds-foundation.mdx
+++ b/data/blog/opensats-receives-two-million-donation-from-the-reynolds-foundation.mdx
@@ -30,7 +30,7 @@ the [OpenSats mission] to support Bitcoin and related free and open-source
 software that strengthens individual sovereignty and liberty.
 
 We are thankful to The Reynolds Foundation for placing its trust and confidence
-in OpenSats, and we will continue working hard to make it count.
+in OpenSats, and we remain fully committed to making it count.
 
 <div className="text-center">
   <DonateRecurringButton />
