Add escaping $ to prevent inline-math parsing using \
Corrected formatting of the dollar amount

--- a/data/blog/opensats-receives-two-million-donation-from-the-reynolds-foundation.mdx
+++ b/data/blog/opensats-receives-two-million-donation-from-the-reynolds-foundation.mdx
@@ -9,8 +9,8 @@ summary: "The Reynolds Foundation is supporting OpenSats with a $2,000,000 donat
 ---
 
 We are delighted to share that [The Reynolds Foundation] has made an additional
-$2,000,000 donation to OpenSats, directed to our General Fund, following [a
-$1,000,000 gift last year].
+\$2,000,000 donation to OpenSats, directed to our General Fund, following [a
+\$1,000,000 gift last year].
 
 Bitcoin development is a long-distance effort. OpenSats' focus is on providing
 steady funding, and [long-term support] so contributors can work on freedom tech
