Update reference link tag

--- a/data/blog/opensats-receives-two-million-donation-from-the-reynolds-foundation.mdx
+++ b/data/blog/opensats-receives-two-million-donation-from-the-reynolds-foundation.mdx
@@ -40,7 +40,7 @@ If you are a developer working on free and open-source bitcoin and nostr
 projects, we encourage you to [apply for funding].
 
 [The Reynolds Foundation]: https://www.reynoldsfoundation.com/
-[\a $1,000,000 gift last year]: /blog/opensats-receives-one-million-from-reynolds-foundation
+[a \$1,000,000 gift last year]: /blog/opensats-receives-one-million-from-reynolds-foundation
 [long-term support]: /tags/lts
 [our funds]: /funds
 [operational budget]: /funds/ops
