Fix Nostr Feedz section heading

--- a/data/blog/fourteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/fourteenth-wave-of-nostr-grants.mdx
@@ -47,7 +47,7 @@ nostr.
 
 ---
 
-### Nostr Feedz and PlebOne Relay
+### Nostr Feedz
 
 [PlebOne] is building two nostr services that aim to improve publishing and
 reading on nostr. PlebOne Relay ([relay.pleb.one]) is a whitelist-based relay
@@ -124,7 +124,7 @@ donating to [The Nostr Fund] or becoming a recurring supporter.
 If you are a developer working on free and open-source nostr projects, please
 consider [applying for funding].
 
-[Nostr Feedz and PlebOne Relay]: #nostr-feedz-and-plebone-relay
+[Nostr Feedz and PlebOne Relay]: #nostr-feedz
 [Quartz]: #quartz
 [YakiHonne]: #yakihonne
 [Aug. 2024]: /blog/nostr-grants-august-2024#dart-ndk
