docs(blog): align Nostr Feedz label and anchor

--- a/data/blog/fourteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/fourteenth-wave-of-nostr-grants.mdx
@@ -22,7 +22,7 @@ continued maintenance and incremental improvements remain important.
 
 The first-time grants in this wave will go to:
 
-- [Nostr Feedz and PlebOne Relay]
+- [Nostr Feedz]
 - [Quartz]
 - [YakiHonne]
 
@@ -124,7 +124,7 @@ donating to [The Nostr Fund] or becoming a recurring supporter.
 If you are a developer working on free and open-source nostr projects, please
 consider [applying for funding].
 
-[Nostr Feedz and PlebOne Relay]: #nostr-feedz
+[Nostr Feedz]: #nostr-feedz
 [Quartz]: #quartz
 [YakiHonne]: #yakihonne
 [Aug. 2024]: /blog/nostr-grants-august-2024#dart-ndk
