docs(blog): clarify relay.pleb.one description

--- a/data/blog/fourteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/fourteenth-wave-of-nostr-grants.mdx
@@ -49,14 +49,15 @@ nostr.
 
 ### Nostr Feedz
 
-[PlebOne] is building two nostr services that aim to improve publishing and
-reading on nostr. PlebOne Relay ([relay.pleb.one]) is a whitelist-based relay
-where only approved users can publish, paired with a dashboard for managing
-access and invites. [Nostr Feedz] is a web app that lets users follow
-traditional RSS feeds alongside nostr long-form content ([NIP-23]), with a
-public guide/directory for discovering writers. Nostr Feedz also provides a
-"nostr to RSS" feature that turns nostr long-form posts into an RSS feed, so
-those updates can be followed in standard RSS readers outside nostr.
+[Nostr Feedz] is a web app that lets users follow traditional RSS feeds
+alongside nostr long-form content ([NIP-23]), with a public guide/directory for
+discovering writers. Nostr Feedz also provides a "nostr to RSS" feature that
+turns nostr long-form posts into an RSS feed, so those updates can be followed
+in standard RSS readers outside nostr.
+
+The author of Nostr Feedz, [PlebOne], also maintains a self-hostable relay
+project and runs a community instance at [relay.pleb.one] with invite-only
+Web-of-Trust access and an admin dashboard for managing invites.
 
 With support from this grant, PlebOne intends to run PlebOne Relay and Nostr
 Feedz on reliable VPS infrastructure and bring both services into a stable,
