--- a/data/blog/fourteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/fourteenth-wave-of-nostr-grants.mdx
@@ -58,6 +58,8 @@ in standard RSS readers outside nostr.
 The author of Nostr Feedz, [PlebOne], also maintains a self-hostable relay
 project and runs a community instance at [relay.pleb.one] with invite-only
 Web-of-Trust access and an admin dashboard for managing invites.
+Comparable self-hostable implementations include [pyramid] by fiatjaf and [WoT
+Relay] by utxo.
 
 With support from this grant, PlebOne intends to run PlebOne Relay and Nostr
 Feedz on reliable VPS infrastructure and bring both services into a stable,
@@ -138,6 +140,8 @@ consider [applying for funding].
 [NIP-23]: https://github.com/nostr-protocol/nips/blob/master/23.md
 [Nostr-Feedz]: https://github.com/PlebOne/Nostr-Feedz
 [PlebOne/relay.pleb.one]: https://github.com/PlebOne/relay.pleb.one
+[pyramid]: https://github.com/fiatjaf/pyramid
+[WoT Relay]: https://github.com/bitvora/wot-relay/
 [KMP]: https://kotlinlang.org/docs/multiplatform/kmp-overview.html
 [Amethyst]: /projects/amethyst
 [amethyst/tree/main/quartz]: https://github.com/vitorpamplona/amethyst/tree/main/quartz
