docs(blog): split relay.pleb.one sentence

--- a/data/blog/fourteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/fourteenth-wave-of-nostr-grants.mdx
@@ -56,7 +56,7 @@ turns nostr long-form posts into an RSS feed, so those updates can be followed
 in standard RSS readers outside nostr.
 
 The author of Nostr Feedz, [PlebOne], also maintains a self-hostable relay
-project and runs a community instance at [relay.pleb.one] with invite-only
+project and runs a community instance at [relay.pleb.one]. It uses invite-only
 Web-of-Trust access and an admin dashboard for managing invites.
 Comparable self-hostable implementations include [pyramid] by fiatjaf and [WoT
 Relay] by utxo.
