docs(blog): tighten comparable relay mention

--- a/data/blog/fourteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/fourteenth-wave-of-nostr-grants.mdx
@@ -57,9 +57,8 @@ in standard RSS readers outside nostr.
 
 The author of Nostr Feedz, [PlebOne], also maintains a self-hostable relay
 project and runs a community instance at [relay.pleb.one]. It uses invite-only
-Web-of-Trust access and an admin dashboard for managing invites.
-Comparable self-hostable implementations include [pyramid] by fiatjaf and [WoT
-Relay] by utxo.
+Web-of-Trust access and an admin dashboard for managing invites, similar to
+fiatjaf's [pyramid] and utxo's [WoT Relay].
 
 With support from this grant, PlebOne intends to run PlebOne Relay and Nostr
 Feedz on reliable VPS infrastructure and bring both services into a stable,
