docs(blog): emphasize development and stability for Nostr Feedz

--- a/data/blog/fourteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/fourteenth-wave-of-nostr-grants.mdx
@@ -60,10 +60,10 @@ project and runs a community instance at [relay.pleb.one]. It uses invite-only
 Web-of-Trust access and an admin dashboard for managing invites, similar to
 fiatjaf's [pyramid] and utxo's [WoT Relay].
 
-With support from this grant, PlebOne intends to run PlebOne Relay and Nostr
-Feedz on reliable VPS infrastructure and bring both services into a stable,
-public-facing production state. The funding is expected to cover initial hosting
-and operational costs, with the capacity to scale if usage grows.
+With support from this grant, PlebOne plans to continue developing Nostr Feedz
+and improve its stability and reliability as a public-facing production
+service. The work includes maintenance, bug fixes, and operational hardening for
+both Nostr Feedz and the relay project.
 
 Repositories: [Nostr-Feedz]; [PlebOne/relay.pleb.one]  
 License: MIT
