--- a/data/blog/fourteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/fourteenth-wave-of-nostr-grants.mdx
@@ -60,10 +60,10 @@ project and runs a community instance at [relay.pleb.one]. It uses invite-only
 Web-of-Trust access and an admin dashboard for managing invites, similar to
 fiatjaf's [pyramid] and utxo's [WoT Relay].
 
-With support from this grant, PlebOne plans to continue developing Nostr Feedz
-and improve its stability and reliability as a public-facing production
-service. The work includes maintenance, bug fixes, and operational hardening for
-both Nostr Feedz and the relay project.
+With support from this grant, PlebOne will keep building out Nostr Feedz and the
+relay project—shipping improvements, strengthening reliability, and maturing
+both into stable production services. Funding also contributes to ongoing
+maintenance and operational costs of the public instances.
 
 Repositories: [Nostr-Feedz]; [PlebOne/relay.pleb.one]  
 License: MIT
